--- a/TKV2026_soubory/sheet012.htm
+++ b/TKV2026_soubory/sheet012.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=9199 style='border-collapse:
- collapse;table-layout:fixed;width:6916pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=9300 style='border-collapse:
+ collapse;table-layout:fixed;width:6992pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
@@ -99,6 +99,27 @@ else
  width:35pt'>
  <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
  width:134pt'>
+ <col class=xl70 width=73 style='mso-width-source:userset;mso-width-alt:2669;
+ width:55pt'>
+ <col class=xl70 width=50 style='width:38pt'>
+ <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
+ width:35pt'>
+ <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
+ width:133pt'>
+ <col class=xl70 width=73 style='mso-width-source:userset;mso-width-alt:2669;
+ width:55pt'>
+ <col class=xl70 width=50 style='width:38pt'>
+ <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
+ width:35pt'>
+ <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
+ width:134pt'>
+ <col class=xl70 width=73 style='mso-width-source:userset;mso-width-alt:2669;
+ width:55pt'>
+ <col class=xl70 width=50 style='width:38pt'>
+ <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
+ width:35pt'>
+ <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
+ width:134pt'>
  <col class=xl70 width=105 style='mso-width-source:userset;mso-width-alt:3840;
  width:79pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -111,27 +132,6 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
- width:134pt'>
- <col class=xl70 width=73 style='mso-width-source:userset;mso-width-alt:2669;
- width:55pt'>
- <col class=xl70 width=50 style='width:38pt'>
- <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
- width:35pt'>
- <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
- width:134pt'>
- <col class=xl70 width=73 style='mso-width-source:userset;mso-width-alt:2669;
- width:55pt'>
- <col class=xl70 width=50 style='width:38pt'>
- <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
- width:35pt'>
- <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
- width:133pt'>
- <col class=xl70 width=73 style='mso-width-source:userset;mso-width-alt:2669;
- width:55pt'>
- <col class=xl70 width=50 style='width:38pt'>
- <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
- width:35pt'>
  <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
  width:133pt'>
  <col class=xl70 width=73 style='mso-width-source:userset;mso-width-alt:2669;
@@ -146,8 +146,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
- width:57pt'>
+ <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
+ width:133pt'>
  <col class=xl70 width=73 style='mso-width-source:userset;mso-width-alt:2669;
  width:55pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -307,6 +307,18 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=179 style='width:134pt'></td>
+  <td class=xl70 width=73 style='width:55pt'></td>
+  <td class=xl70 width=50 style='width:38pt'></td>
+  <td class=xl70 width=47 style='width:35pt'></td>
+  <td class=xl70 width=177 style='width:133pt'></td>
+  <td class=xl70 width=73 style='width:55pt'></td>
+  <td class=xl70 width=50 style='width:38pt'></td>
+  <td class=xl70 width=47 style='width:35pt'></td>
+  <td class=xl70 width=179 style='width:134pt'></td>
+  <td class=xl70 width=73 style='width:55pt'></td>
+  <td class=xl70 width=50 style='width:38pt'></td>
+  <td class=xl70 width=47 style='width:35pt'></td>
+  <td class=xl70 width=179 style='width:134pt'></td>
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -314,18 +326,6 @@ else
   <td class=xl70 width=73 style='width:55pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=179 style='width:134pt'></td>
-  <td class=xl70 width=73 style='width:55pt'></td>
-  <td class=xl70 width=50 style='width:38pt'></td>
-  <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=179 style='width:134pt'></td>
-  <td class=xl70 width=73 style='width:55pt'></td>
-  <td class=xl70 width=50 style='width:38pt'></td>
-  <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=177 style='width:133pt'></td>
-  <td class=xl70 width=73 style='width:55pt'></td>
-  <td class=xl70 width=50 style='width:38pt'></td>
-  <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=177 style='width:133pt'></td>
   <td class=xl70 width=73 style='width:55pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
@@ -334,7 +334,7 @@ else
   <td class=xl70 width=73 style='width:55pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=76 style='width:57pt'></td>
+  <td class=xl70 width=177 style='width:133pt'></td>
   <td class=xl70 width=73 style='width:55pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -410,7 +410,7 @@ else
   <td class=xl70 width=73 style='width:55pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl177 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl179 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2026 - PŘIBYSLAV - 501
   DO</td>
   <td class=xl143>&nbsp;</td>
@@ -1088,7 +1088,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl164 style='border-left:none'>11</td>
+  <td class=xl164 style='border-left:none'>12</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl162>&nbsp;</td>
@@ -1217,11 +1217,11 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>9</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>5850</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>6500</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>219
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>245
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1359,12 +1359,12 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5650</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>211
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>213
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl164 style='border-top:none;border-left:none'>9</td>
+  <td class=xl164 style='border-top:none;border-left:none'>10</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1583,11 +1583,11 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>9</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3750</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>4300</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>140
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>162
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1812,16 +1812,16 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
   [CZE069712]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>7</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3050</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>8</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3500</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>114
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>132
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
-  <td colspan=2 class=xl186 style='border-right:.5pt solid black;border-left:
-  none'>787 Kč</td>
+  <td colspan=2 class=xl188 style='border-right:.5pt solid black;border-left:
+  none'>869 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2040,11 +2040,11 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>9</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>2750</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3100</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>103
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>117
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2178,8 +2178,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>5</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>1750</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>2000</td>
   <td class=xl139></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2593,9 +2593,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2673,16 +2675,16 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Čermák Michal [CZE057910]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>700</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>850</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl82 style='border-top:none'>Strašil Pavel [CZE015487]</td>
-  <td class=xl145 style='border-left:none'>6</td>
+  <td class=xl145 style='border-left:none'>7</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2749,9 +2751,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2829,9 +2833,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Čermák Michal [CZE057910]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>600</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2906,9 +2910,12 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
+  [CZE069712]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3064,9 +3071,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3218,9 +3227,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3367,9 +3378,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -14655,6 +14668,18 @@ else
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=179 style='width:134pt'></td>
+  <td width=73 style='width:55pt'></td>
+  <td width=50 style='width:38pt'></td>
+  <td width=47 style='width:35pt'></td>
+  <td width=177 style='width:133pt'></td>
+  <td width=73 style='width:55pt'></td>
+  <td width=50 style='width:38pt'></td>
+  <td width=47 style='width:35pt'></td>
+  <td width=179 style='width:134pt'></td>
+  <td width=73 style='width:55pt'></td>
+  <td width=50 style='width:38pt'></td>
+  <td width=47 style='width:35pt'></td>
+  <td width=179 style='width:134pt'></td>
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
@@ -14662,18 +14687,6 @@ else
   <td width=73 style='width:55pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=179 style='width:134pt'></td>
-  <td width=73 style='width:55pt'></td>
-  <td width=50 style='width:38pt'></td>
-  <td width=47 style='width:35pt'></td>
-  <td width=179 style='width:134pt'></td>
-  <td width=73 style='width:55pt'></td>
-  <td width=50 style='width:38pt'></td>
-  <td width=47 style='width:35pt'></td>
-  <td width=177 style='width:133pt'></td>
-  <td width=73 style='width:55pt'></td>
-  <td width=50 style='width:38pt'></td>
-  <td width=47 style='width:35pt'></td>
   <td width=177 style='width:133pt'></td>
   <td width=73 style='width:55pt'></td>
   <td width=50 style='width:38pt'></td>
@@ -14682,7 +14695,7 @@ else
   <td width=73 style='width:55pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=76 style='width:57pt'></td>
+  <td width=177 style='width:133pt'></td>
   <td width=73 style='width:55pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
